# flow3r-firmware

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  flake.nix  idf_ext.py  manifest.py  partitions.csv  revision_config.h  sdkconfig  sdkconfig.defaults  sdkconfig.p1  sdkconfig.p3  sdkconfig.p4  sdkconfig.p5  sdkconfig.p6  sdkconfig.p6spiral
badge23/: audio.c  audio.h  captouch.c  captouch.h  decode_image.h  display.c  display.h  espan.c  idf_component.yml  leds.c  leds.h  scope.c  synth.c  synth.h  tags
badge23/instruments/: minimal_example.c
components/audio_mod/: CMakeLists.txt  audio_mod.c  pocketmod.h
components/audio_mp3/: CMakeLists.txt  audio_mp3.c  minimp3.h
components/badge23/: CMakeLists.txt  Kconfig  README.md  apa102LEDStrip.c  audio.c  captouch.c  display.c  espan.c  leds.c  portexpander.c  scope.c  spio.c  synth.c
components/badge23_bsp/: CMakeLists.txt
components/badge23_hwconfig/: CMakeLists.txt  badge23_hwconfig.c
components/bl00mbox/: .clang-tidy  CMakeLists.txt  README.md  bl00mbox.c  bl00mbox_audio.c  bl00mbox_plugin_registry.c  bl00mbox_radspa_requirements.c  bl00mbox_user.c  bl00mbox_utils.c  idf_component.yml
components/bl00mbox/buds/tinysynth/: tinysynth.c  tinysynth.h
components/bl00mbox/include/: bl00mbox.h  bl00mbox_audio.h  bl00mbox_plugin_registry.h  bl00mbox_radspa_requirements.h  bl00mbox_user.h  bud_registry.h  radspa.h
components/bl00mbox/micropython/: mp_sys_bl00mbox.c
components/bl00mbox/micropython/bl00mbox/: __init__.py  _helpers.py  _patches.py  _plugins.py  _user.py
components/bl00mbox/plugins/: ampliverter.c  ampliverter.h  delay.c  delay.h  distortion.c  distortion.h  env_adsr.c  env_adsr.h  flanger.c  lowpass.c  lowpass.h  mixer.c  multipitch.c  noise.c  noise.h  noise_burst.c  noise_burst.h  oldschool_compressor.c  oldschool_compressor.h  osc_fm.c  sampler.c  sampler.h  sequencer.c  sequencer.h  slew_rate_limiter.c  slew_rate_limiter.h
components/bl00mbox/plugins/bl00mbox/: bl00mbox_line_in.c  bl00mbox_line_in.h
components/bl00mbox/plugins/brok3n/: filter.c  filter.h  sequence_timer.c
components/bl00mbox/plugins/tools/: ampliverter.c  delay.c  delay.h  filter.c  sampler.c  sampler.h  sequence_timer.h
components/bl00mbox/plugins/trad_synth/: trad_synth.c  trad_synth.h
components/bl00mbox/radspa/: radspa.c  radspa.h  radspa_helpers.c  radspa_helpers.h
components/bl00mbox/radspa/standard_plugin_lib/: ampliverter.c  delay.c  delay.h  distortion.c  env_adsr.c  env_adsr.h  filter.c  filter.h  flanger.c  flanger.h  lowpass.c  mixer.c  mixer.h  multipitch.c  multipitch.h  noise.c  noise_burst.c  noise_burst.h  osc.c  osc.h  osc_fm.c  osc_fm.h  poly_squeeze.c  poly_squeeze.h  range_shifter.c  range_shifter.h  sampler.c  sampler.h  sequencer.c  slew_rate_limiter.c
components/bmi270/: CMakeLists.txt  bmi2.c
components/bmp581/: CMakeLists.txt  bmp5.c
components/ctx/: ctx.c  ctx.h  ctx_config.h
components/doomgeneric/: CMakeLists.txt
components/flow3r_bsp/: CMakeLists.txt  Kconfig  flow3r_bsp.h  flow3r_bsp_ad7147.c  flow3r_bsp_ad7147.h  flow3r_bsp_ad7147_hw.c  flow3r_bsp_ad7147_hw.h  flow3r_bsp_audio.c  flow3r_bsp_captouch.c  flow3r_bsp_captouch.h  flow3r_bsp_display.c  flow3r_bsp_gc9a01.c  flow3r_bsp_gc9a01.h  flow3r_bsp_hwconfig.c  flow3r_bsp_i2c.c  flow3r_bsp_i2c.h  flow3r_bsp_imu.c  flow3r_bsp_imu.h  flow3r_bsp_leds.c  flow3r_bsp_max7321.c  flow3r_bsp_max7321.h  flow3r_bsp_max98091.c  flow3r_bsp_max98091.h  flow3r_bsp_max98091_hwregs.h  flow3r_bsp_rmtled.c  flow3r_bsp_rmtled.h  flow3r_bsp_spiled.c  flow3r_bsp_spiled.h  flow3r_bsp_spio.c  flow3r_bsp_spio.h
components/gc9a01/: CMakeLists.txt  Kconfig  gc9a01.c  gc9a01.h
components/micropython/: .clang-tidy  CMakeLists.txt  manifest.py
components/st3m/: CMakeLists.txt  st3m_audio.c  st3m_audio.h  st3m_badgenet.c  st3m_badgenet.h  st3m_badgenet_switch.c  st3m_badgenet_switch.h  st3m_board_startup.c  st3m_captouch.c  st3m_captouch.h  st3m_colors.c  st3m_colors.h  st3m_console.c  st3m_console.h  st3m_counter.c  st3m_counter.h  st3m_fs.c  st3m_fs.h  st3m_fs_flash.c  st3m_fs_flash.h  st3m_fs_sd.c  st3m_fs_sd.h  st3m_gfx.c  st3m_gfx.h  st3m_imu.c  st3m_imu.h  st3m_inputstate.c  st3m_inputstate.h  st3m_io.c  st3m_io.h  st3m_leds.c  st3m_leds.h  st3m_media.c  st3m_media.h  st3m_mode.c  st3m_mode.h  st3m_pcm.c  st3m_pcm.h  st3m_ringbuffer.c  st3m_ringbuffer.h  (+12 more)
components/st3m/host-tools/: pack-sys.py  version.py
components/tinyusb/: .clang-tidy  CMakeLists.txt
components/video_gif/: CMakeLists.txt  video_gif.c
components/video_mpeg/: .clang-tidy  CMakeLists.txt  pl_mpeg.h  video_mpeg.c
docs/: conf.py  index.rst
docs/api/: audio.rst  badge_link.rst  badgelink.rst  badgenet.rst  bl00mbox.rst  captouch.rst  colours.rst  ctx.rst  hardware.rst  inputstate.rst  kernel.rst  led_patterns.rst  leds.rst  (+5 more)
main/: CMakeLists.txt  README.md  fs.c  fs.h  main.c  st3m_tar.h
main/include/: mpconfigboard.h
nix/: docker-image.nix  esp-llvm.nix  esp32s3-toolchain-bin.nix  openocd-esp32-bin.nix  pkgs.nix  shell.nix  sources.json
python_modules/: bl00mbox.py  bl00mbox_helpers.py  bl00mbox_patches.py  bl00mbox_plugins.py  bl00mbox_sequencer.py  hello.py  wave.py
python_payload/: README.md  application.py  bl00mbox  boot.py  boot_button_demo.py  cap_touch_demo.py  control.py  demo_menu.py  demo_sparabo.py  demo_worms.py  drums_and_notes.py  event.py  harmonic_demo.py  main.py  main_orig.py  main_st4m.py  melodic_demo.py  menu.py  menu_settings.py  menu_tinysynth.py  ui.py  utils.py
python_payload_factory/: .flake8  main.py
recovery/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
sim/: README.md  requirements.txt  run.py
tools/: clang-tidy-report.py  clang-tidy.sh  codequal-report.py  dist.sh  encode-mpg.sh  flash-full.sh  format.sh  mypy.sh
usermodule/: README.md  micropython.cmake  mp_audio.c  mp_badge_link.c  mp_bl00mbox.c  mp_captouch.c  mp_hardware.c  mp_kernel.c  mp_leds.c  mp_synth.c  mp_uctx.c
webflasher/: README.md  package-lock.json  package.json  tsconfig.json
(+402 files in other folders)
