#SPDX-License-Identifier: CC0-1.0

idf_component_register(
    SRCS
        bl00mbox.c
        bl00mbox_audio.c
        bl00mbox_user.c
        bl00mbox_plugin_registry.c
        bl00mbox_radspa_requirements.c
        plugins/osc_fm.c
        plugins/env_adsr.c
        plugins/ampliverter.c
        plugins/sampler.c
        plugins/delay.c
        plugins/flanger.c
        plugins/multipitch.c
        plugins/sequencer.c
        plugins/noise.c
        plugins/noise_burst.c
        plugins/distortion.c
        plugins/lowpass.c
        plugins/mixer.c
        plugins/oldschool_compressor.c
        plugins/slew_rate_limiter.c
        plugins/bl00mbox/bl00mbox_line_in.c
        radspa/radspa_helpers.c
        extern/xoroshiro64star.c
    INCLUDE_DIRS
        include
        plugins
        plugins/bl00mbox
        radspa
        extern
    REQUIRES
        st3m
)
